--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Add your site or application content here -->
     <header>
         <div class="content-wrapper">
-            <a href="#"><img src="" alt="unplugged logo"></a>
+            <figure><a href="#"><img src="" alt="unplugged logo"></a></figure>
             <div class="header-divider">
             </div>
             <nav>
@@ -48,9 +48,9 @@
                 <h2>Want to join the next retreat?</h2>
                 <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
             </div>
-            <h2>Find out more</h2>
             
             <div class="form">
+                <h2>Find out more</h2>
                 <input type="text" name="name" value="email address">
                 <input type="button" value="Download Itinerary">
             </div>
@@ -58,7 +58,7 @@
         
         <section class="features">
             <!--campground-->
-            <article>
+            <article class="features-items">
                 <p class="fontawesome-icon"></p>
                 <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
             </article>
@@ -98,7 +98,8 @@
         <section class="reviews">
             <div class="content-wrapper">
                 <h2>Be a better team in 5 days, like this one</h2>
-                <div>
+                <div class="reviews-content">
+                    <figure></figure>
                     <h3>LaCrue Bottling Co. October 2018</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
                 </div>
